--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-   <h1>Welcome to BTPN Online Shop API</h1>
+   <h1>Welcome to Simple Online Shop API</h1>
    <p>Read the <a th:href="@{/docs}">documentation</a></p>
 </body>
 
